--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<html> 
-<body> 
-Hello there, awesome person!
-</body> 
-</html> 
+<html>
+    <head>
+        <title>Title</title>
+    </head>
+
+    <body>
+       Hello there, awesome person!
+    </body>
+</html>
